Acompanhamento: uma vez que o pedido é confirmado e pago, ele é enviado para a cozinha para ser preparado.
