# internal/usecase/order/create/create_order_dto.go
@@ -17,10 +17,11 @@ type OrderItemCreateInputDTO struct {
 }
 
 type OrderCreateOutputDTO struct {
-	ID          string                  `json:"id"`
-	Items       []*usecase.OrderItemDTO `json:"items"`
-	Total       float64                 `json:"total"`
-	Status      string                  `json:"status"`
-	CustomerCPF string                  `json:"customercpf"`
-	CreatedAt   time.Time               `json:"created_at"`
+	ID             string                  `json:"id"`
+	Items          []*usecase.OrderItemDTO `json:"items"`
+	Total          float64                 `json:"total"`
+	Status         string                  `json:"status"`
+	CustomerCPF    string                  `json:"customercpf"`
+	CreatedAt      time.Time               `json:"created_at"`
+	DeliveryNumber string                  `json:"delivery_number"`
 }
