# internal/usecase/order/findbyparam/order_find_by_param_dto.go
@@ -9,10 +9,11 @@ import (
 type OrderFindByParamInputDTO struct{}
 
 type OrderFindByParamOutputDTO struct {
-	ID          string                  `json:"id"`
-	Items       []*usecase.OrderItemDTO `json:"items"`
-	Total       float64                 `json:"total"`
-	Status      string                  `json:"status"`
-	CustomerCPF string                  `json:"customercpf"`
-	CreatedAt   time.Time               `json:"created_at"`
+	ID             string                  `json:"id"`
+	Items          []*usecase.OrderItemDTO `json:"items"`
+	Total          float64                 `json:"total"`
+	Status         string                  `json:"status"`
+	CustomerCPF    string                  `json:"customercpf"`
+	CreatedAt      time.Time               `json:"created_at"`
+	DeliveryNumber string                  `json:"delivery_number"`
 }
